# bozPicks

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  PLAN.md  README.md  STATUS.md  check-db.js  eslint.config.mjs  migrate.js  package.json  pnpm-lock.yaml  railpack.json  setup-txline.js  subscribe-txline.ts  test-txline.js  turbo.json
.claude/: launch.json
.github/workflows/: ci.yml
apps/agent/: package.json
apps/agent/src/: arena.ts  detector.ts  index.ts  marketmaker.ts  tracker.ts
apps/ingest/: package.json
apps/ingest/src/: backfill.ts  demoRunner.ts  index.ts  normalizer.test.ts  normalizer.ts  publisher.ts  recorder.ts
apps/keeper/: package.json
apps/keeper/scripts/: onchain-parimutuel-e2e.mts
apps/keeper/src/: index.ts  txline-validator.ts
apps/web/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/public/: manifest.json  offline.html  sw.js
docs/: DEMO-SCRIPT-track1-markets.md  DEMO-SCRIPT-track2-consumer.md  DEMO-SCRIPT-track3-agent.md  DEMO-SCRIPTS.md  README-track1-bozSettle.md  README-track2-bozPicks.md  README-track3-bozAgent.md  TXLINE-REFERENCE.md  WEEK-PLAN-STATUS.md  WINNING-STRATEGY.md  video-script-track1-settlement.md  video-script-track2-consumer.md  video-script-track3-agent.md  youtube-descriptions.md
docs/assets/: README.md
docs/db/: 001_init.sql  002_rich_stats.sql  003_vault.sql  004_vault_lifetime_totals.sql
docs/submissions/: SUBMISSION-FORM.md  track1-bozSettle.md  track2-bozPicks.md  track3-bozAgent.md
programs/settlement/: Cargo.toml
programs/settlement/src/: lib.rs
(+169 files in other folders)
