[package]
name = "settlement"
version = "0.1.0"
description = "bozSettle — parimutuel prediction pool with TxLINE on-chain verification"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "settlement"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang  = "0.30.1"
anchor-spl   = { version = "0.30.1", features = ["token"] }

[dev-dependencies]
anchor-client = "0.30.1"
